[project]
name = "temp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=4.3.0",
    "bs4>=0.0.2",
    "fastapi>=0.115.12",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-core>=0.3.51",
    "langchain-openai>=0.3.12",
    "langgraph>=0.3.28",
    "openpyxl>=3.1.5",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.11.3",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "python-jose>=3.4.0",
    "python-multipart>=0.0.20",
    "python-pptx>=1.0.2",
    "sqlmodel>=0.0.24",
    "uvicorn[standard]>=0.34.0",
    "validators>=0.34.0",
    "youtube-transcript-api>=1.0.3",
]
